--- a/helm/templates/job-schema-loader.yaml
+++ b/helm/templates/job-schema-loader.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.job.enabled -}}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -31,3 +32,4 @@ spec:
               value: {{ .Values.schema_type }}
           volumeMounts:
             {{- toYaml .Values.volumeMounts | nindent 12 }}
+{{- end -}}
