--- a/helm/prod/frontend.yaml
+++ b/helm/prod/frontend.yaml
@@ -15,6 +15,7 @@ containers:
     image: 739561048503.dkr.ecr.us-east-1.amazonaws.com/frontend:1.0.1
     imagePullPolicy: Always
 
-
+ingress:
+  enabled: true
 
 
