--- a/helm/templates/ingress.yml
+++ b/helm/templates/ingress.yml
@@ -5,6 +5,7 @@ metadata:
   name: {{ .Values.component }}
   annotations:
     external-dns.alpha.kubernetes.io/hostname: {{ .Values.component }}-{{ .Values.env }}.rdevopsb73.online
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 spec:
   ingressClassName: nginx
   rules:
