--- a/helm/dev/frontend.yaml
+++ b/helm/dev/frontend.yaml
@@ -18,5 +18,11 @@ containers:
 ingress:
   enabled: true
 
-
+resources:
+  requests:
+    memory: "100Mi"
+    cpu: "100m"
+  limits:
+    memory: "150Mi"
+    cpu: "100m"
 
