--- a/helm/dev/cart.yaml
+++ b/helm/dev/cart.yaml
@@ -18,5 +18,12 @@ containers:
     image: 739561048503.dkr.ecr.us-east-1.amazonaws.com/cart:1.0.4
     imagePullPolicy: Always
 
+resources:
+  requests:
+    memory: "100Mi"
+    cpu: "100m"
+  limits:
+    memory: "150Mi"
+    cpu: "100m"
 
 
