--- a/helm/dev/shipping.yaml
+++ b/helm/dev/shipping.yaml
@@ -25,3 +25,12 @@ containers:
     image: 739561048503.dkr.ecr.us-east-1.amazonaws.com/schema-loader:1.0.0
     imagePullPolicy: Always
 
+resources:
+  requests:
+    memory: "2Gi"
+    cpu: "1000m"
+  limits:
+    memory: "2.5Gi"
+    cpu: "1500m"
+
+
