--- a/helm/dev/user.yaml
+++ b/helm/dev/user.yaml
@@ -16,5 +16,13 @@ containers:
     image: 739561048503.dkr.ecr.us-east-1.amazonaws.com/user:1.0.2
     imagePullPolicy: Always
 
+resources:
+  requests:
+    memory: "100Mi"
+    cpu: "100m"
+  limits:
+    memory: "150Mi"
+    cpu: "100m"
+
 
 
