--- a/helm/prod/payment.yaml
+++ b/helm/prod/payment.yaml
@@ -15,3 +15,11 @@ containers:
   main:
     image: 739561048503.dkr.ecr.us-east-1.amazonaws.com/payment:1.0.1
     imagePullPolicy: Always
+
+resources:
+  requests:
+    memory: "250Mi"
+    cpu: "200m"
+  limits:
+    memory: "350Mi"
+    cpu: "300m"
