--- a/helm/templates/deployment.yml
+++ b/helm/templates/deployment.yml
@@ -26,6 +26,12 @@ spec:
           env:
             - name: PARAMS
               value: {{ .Values.PARAMS }}
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: {{ .Values.service.containerPort }}
+            failureThreshold: 10
+            periodSeconds: 10
       containers:
         - name: {{ .Values.component }}
           image: {{ .Values.containers.main.image }}
